--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ textarea{
   width: 100%;
   height: 60px;
 }
-input[type=text], textarea,select{
+input[type=text],input[type=tel],input[type=email], textarea,select{
     width:100%;
     border:2px solid #aaa;
     border-radius:4px;
@@ -28,6 +28,14 @@ input[type=text], textarea,select{
     box-shadow:0 0 8px 0 purple;
   }
   input[type=text]:focus{
+    border-color:purple;
+    box-shadow:0 0 8px 0 purple;
+  }
+  input[type=email]:focus{
+    border-color:purple;
+    box-shadow:0 0 8px 0 purple;
+  }
+  input[type=tel]:focus{
     border-color:purple;
     box-shadow:0 0 8px 0 purple;
   }
@@ -127,12 +135,13 @@ width: 100%;
 @media (min-width: 768px) {
   label{
     margin-top: 30px;
-    width: 35%;
+    width: 29%;
   }
-  input[type=text],select{
-      width:60%;
+  input[type=text],input[type=email],input[type=tel],select{
+      width:70%;
       margin-top: 30px;
       height: 45px;
+
     }
     .container{
       width: 50%;
